# crud-rust-mongodb

./: .env  Cargo.toml
src/: main.rs
src/models/: models.rs
src/services/: create_event.rs  delete_event.rs  get_all_events.rs  get_by_id.rs  mod.rs  update_event.rs
