[package]
name = "trabajo-final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
mongodb = "2.8.2"
dotenvy = "0.15.7"
features = "0.10.0"
futures = "0.3.30"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
bson = { version = "2.10.0", features = ["chrono-0_4"] }